--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,9 +1,9 @@
 h1 {
   color: green;
 }
-#a {
+div:nth-child(1) {
    background-color: #009900;
 }
-#b) {
+div:nth-child(1) {
  background-color: #CCFFFF;
 }
