--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -2,8 +2,8 @@ h1 {
   color: green;
 }
 #ab {
-  background-color: #009900;
+  background: #009900;
 }
 #cd {
-  background-color: #CCFFFF;
+  background: #CCFFFF;
 }
