--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,8 @@
     <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
     <title>IFPB - Horários</title>
   </head>
-  <body background= "http://wallpapers55.com/wp-content/uploads/2013/12/hd-wallpaper-bike-on-sunset.jpg">
-      {{content}}
+  <body>
+    <h2>Porra</h2>
+    {{content}}
   </body>
 </html>
