--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -11,3 +11,10 @@ h1 {
 table{
   background: #000000;
 }
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #606c71; }
