--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,1 +1,21 @@
 
+h1 {
+  color: pink;
+}
+.hora {
+  background: #009900;
+}
+.aula {
+  background: #CCFFFF;
+}
+
+table{
+  background: #000000;
+}
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #606c71; }
