--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,6 +1,6 @@
 
 h1 {
-  color: pink;
+  color: green;
 }
 .hora {
   background: #009900;
@@ -18,4 +18,4 @@ body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: #606c71; }
+  color: #CCFFFF; }
