--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 table{
-  background: #000000;
+  background: #CCFFFF;
 }
 body {
   padding: 0;
@@ -18,4 +18,4 @@ body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: #CCFFFF; }
+  color: black; }
