--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
+     <link rel="icon" type="image/png" href="">
     <title>IFPB - Horários</title>
   </head>
   <body>
