--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -3,19 +3,16 @@ h1 {
   color: green;
 }
 .hora {
-  background: #009900;
+  background: #CCFFFF;
 }
 .aula {
   background: #009900;
 }
 
-table{
-  background: #CCFFFF;
-}
 body {
   padding: 0;
   margin: 0;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color:  #009900; }
+  color:  black; }
