--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,6 +1,4 @@
-h3 {
-  text-align: center;
-}
+
 h1 {
   color: green;
 }
@@ -24,4 +22,6 @@ body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color:  black; }
+  color:  black;
+  text-align: center;
+}
