--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -11,11 +11,12 @@ h1 {
   background-color: #c4ffc4;
 }
 
-table{
+.table-kauan{
   background-color: #c4ffc4;
   text-align: center;
   border: 2px;
   border-radius: 10px;
+  style="width:100%";
 }
 
 body {
