--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
      <link rel="icon" type="image/png" href="logo_ifpb.png">
     <title style="margin-top: 100px">IFPB - Horários</title>
+    <script src="js/javascript.js"></script>
   </head>
   <body>
     {{content}}
