--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -36,6 +36,8 @@ body {
     font-size: 16px;
     border: none;
     cursor: pointer;
+    width: 150px;
+    margin-top: 5px;
 }
 
 /* Dropdown button on hover & focus */
