--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -28,6 +28,17 @@ body {
   text-align: center;
 }
 
+.wrapper {
+  height: 100%;
+  min-height: 100%;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+
 /* Dropdown Button */
 .dropbtn {
     background-color: #4CAF50;
