--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -28,6 +28,17 @@ body {
   text-align: center;
 }
 
+.wrapper {
+  height: 100%;
+  min-height: 100%;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+
 .dropbtn {
     background-color: #4CAF50;
     color: white;
@@ -35,6 +46,8 @@ body {
     font-size: 16px;
     border: none;
     cursor: pointer;
+    width: 150px;
+    margin-top: 5px;
 }
 
 .dropbtn:hover, .dropbtn:focus {
