--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -40,7 +40,7 @@ body {
 }
 
 .dropbtn {
-    background-color: #4CAF50;
+    background-color: #17b71e;
     color: white;
     padding: 16px;
     font-size: 16px;
