--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
-     <link rel="icon" type="image/png" href="logo_ifpb.png">
+     <link rel="icon" type="image/png" href="img/logo_ifpb.png">
     <title style="margin-top: 100px">IFPB - Horários</title>
     <script src="js/javascript.js"></script>
   </head>
