--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
-     <link rel="icon" type="image/png" href="img/logo_ifpb.png">
+    <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
+    <link rel="icon" type="image/png" href="img/logo_ifpb.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="CSS/w3.css">
     <title style="margin-top: 100px">IFPB - Horários</title>
     <script src="js/javascript.js"></script>
   </head>
