--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -50,6 +50,11 @@ body {
     margin-top: 5px;
 }
 
+.button {
+    margin-top: 5px;
+    display: inline;
+}
+
 .dropbtn:hover, .dropbtn:focus {
     background-color: #3e8e41;
 }
